# slimeonline2-server

./: .gitignore  Cargo.toml  DOCUMENTATION_INDEX.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  prompt.md  prompt2.md  server-src.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
config/: clans.toml  collectibles.toml  game.toml  plants.toml  prices.toml  server.toml  shops.toml  upgrader.toml
docs/: IMPLEMENTATION_GUIDE.md  README.md
docs/architecture/: 01-overview.md  02-connection-manager.md  03-world-manager.md  04-player-manager.md  05-room-system.md  06-event-system.md
docs/database/: 01-schema-overview.md  02-accounts.md  03-characters.md  04-items-inventory.md  05-clans.md  06-mail-bbs.md  07-world-state.md  08-sqlite-adaptation.md
docs/game-systems/: 01-movement-physics.md  02-item-system.md  03-quest-system.md  04-shop-economy.md  05-clan-system.md  06-planting-system.md  07-collectibles.md  08-mail-system.md  09-bbs-system.md  10-special-features.md  11-upgrader-system.md
docs/protocol/: 01-connection.md  02-message-format.md  03-authentication.md  04-message-catalog.md  05-movement-protocol.md  06-timing-and-sync.md  07-decompiled-message-handlers.md  08-validation-rules.md
docs/reference/: 01-constants.md  02-item-database.md  03-room-database.md  04-npc-database.md  05-client-limits.md
docs/security/: 01-threat-model.md  02-server-validation.md  03-anti-cheat.md  04-rate-limiting.md
migrations/: 20240101000001_create_accounts.sql  20240101000002_create_characters.sql  20240101000003_create_inventories.sql  20240101000004_create_clans.sql  20240101000005_create_bans.sql  20240101000006_create_shops.sql  20240101000007_create_mail.sql  20240101000008_create_bbs.sql  20240101000009_add_mail_columns.sql  20240101000010_create_runtime_state.sql  20240101000011_create_quest_progress.sql  20240101000012_create_server_state.sql  20240101000013_create_upgrader.sql  20240101000014_mail_nullable_sender.sql  20240101000015_create_storage.sql
mod_tools/: Cargo.toml
mod_tools/src/: client.rs  main.rs
sor_tool/: Cargo.toml
sor_tool/src/: main.rs
src/: anticheat.rs  constants.rs  crypto.rs  main.rs  rate_limit.rs  validation.rs
src/admin/: mod.rs
src/admin/handlers/: accounts.rs  bans.rs  clans.rs  mail.rs  mod.rs  players.rs  server.rs
src/config/: mod.rs
src/db/: accounts.rs  bbs.rs  characters.rs  clans.rs  mail.rs  mod.rs  runtime_state.rs  upgrader.rs
src/game/: mod.rs
src/handlers/: appearance.rs  auth.rs  bank.rs  bbs.rs  cannon.rs  chat.rs  clan.rs  collectibles.rs  connection.rs  gameplay.rs  items.rs  mail.rs  mod.rs  movement.rs  music.rs  one_time.rs  planting.rs  quest.rs  racing.rs  storage.rs  upgrader.rs  vending.rs  warp.rs
src/handlers/items/: database.rs  discard.rs  mod.rs  pickup.rs  use_item.rs
src/protocol/: messages.rs  mod.rs  reader.rs  types.rs  writer.rs
tools/: extract_rooms.py
(+3 files in other folders)
